Add comprehensive observability with testable interfaces
- Add MetricsCollector and TracingCollector abstract interfaces
- Implement PrometheusMetricsCollector and OpenTelemetryTracingCollector
- Add TestMetricsCollector and TestTracingCollector for testing
- Integrate observability into McpServerBase with dependency injection
- Track tool execution metrics (count, duration, success/error rates, error types)
- Track HTTP request metrics (count, duration, status codes, error types)
- Create trace spans for tool execution with attributes
- Add metrics endpoint (/metrics) for Prometheus scraping
- Support disabling observability for testing
- Comprehensive test suite for metrics and tracing assertions
- Type hints guide agents to implement tracing spans

Metrics tracked:
- Tool execution count, duration, success/error rates
- Error types and reasons
- HTTP request metrics
- Active request counts

Tracing:
- Automatic span creation for tool execution
- Span attributes (tool_name, arguments)
- Error status tracking
- Deep propagation support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,11 @@ dependencies = [
     "uvicorn[standard]>=0.38.0",
     "pydantic>=2.12.4",
     "pyiv @ git+https://github.com/rl337/pyiv.git@main#egg=pyiv",  # Use main for now, will update to v0.2.0 when merged
+    "prometheus-client>=0.20.0",  # Prometheus metrics
+    "opentelemetry-api>=1.24.0",  # OpenTelemetry tracing
+    "opentelemetry-sdk>=1.24.0",
+    "opentelemetry-instrumentation-fastapi>=0.45b0",
+    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
 ]
 
 [project.optional-dependencies]
