--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "fastapi>=0.121.1",
     "uvicorn[standard]>=0.38.0",
     "pydantic>=2.12.4",
-    "pyiv @ git+https://github.com/rl337/pyiv.git@main#egg=pyiv",  # Use main for now, will update to v0.2.0 when merged
+    "pyiv @ git+https://github.com/rl337/pyiv.git@feature/reflection-based-discovery#egg=pyiv",  # Use feature branch with ReflectionConfig
     "prometheus-client>=0.20.0",  # Prometheus metrics
     "opentelemetry-api>=1.24.0",  # OpenTelemetry tracing
     "opentelemetry-sdk>=1.24.0",
