--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,26 +31,10 @@ jobs:
             ${{ runner.os }}-pip-${{ matrix.python-version }}-
             ${{ runner.os }}-pip-
 
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          version: latest
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-
-      - name: Load cached venv
-        id: cached-poetry-dependencies
-        uses: actions/cache@v4
-        with:
-          path: .venv
-          key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
-
-      - name: Install dependencies
-        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-        run: poetry install --no-interaction --no-root --with dev
-
-      - name: Install project
-        run: poetry install --no-interaction --with dev
+      - name: Install project with dev dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e ".[dev]"
 
       - name: Run validation checks
         run: |
@@ -59,10 +43,10 @@ jobs:
             ./run_checks.sh
           else
             echo "No run_checks.sh found, running basic checks..."
-            poetry run pytest --cov=mcp_base --cov-report=xml --cov-report=html --cov-report=term-missing
-            poetry run black --check mcp_base/ tests/ || true
-            poetry run ruff check mcp_base/ tests/ || true
-            poetry run mypy mcp_base/ || true
+            pytest --cov=mcp_base --cov-report=xml --cov-report=html --cov-report=term-missing
+            black --check mcp_base/ tests/ || true
+            ruff check mcp_base/ tests/ || true
+            mypy mcp_base/ || true
           fi
 
       - name: Upload coverage to Codecov
@@ -84,5 +68,6 @@ jobs:
       - name: Build distribution packages (verify build)
         if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
         run: |
-          poetry build
+          pip install build
+          python -m build
           echo "✓ Distribution packages built successfully"
