fix: resolve CI, linting, and type checking issues
- Fixed Poetry to pip/build/twine migration in release workflow
- Added missing dependencies (mcp, httpx) to pyproject.toml
- Fixed all Ruff linting errors (import sorting, unused imports)
- Fixed all MyPy type checking errors (added return type annotations)
- Fixed handler discovery logic to properly find registered handlers
- Fixed TextContent handling in tests to support both TypedDict and Pydantic models
- Updated version-bump workflow to only run on successful CI
- Formatted all code with Black
- All 22 tests now passing

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,10 +43,12 @@ jobs:
             ./run_checks.sh
           else
             echo "No run_checks.sh found, running basic checks..."
+            # Tests must pass for CI to succeed
             pytest --cov=mcp_base --cov-report=xml --cov-report=html --cov-report=term-missing
-            black --check mcp_base/ tests/ || true
-            ruff check mcp_base/ tests/ || true
-            mypy mcp_base/ || true
+            # Linting/formatting checks (warnings only, don't fail CI)
+            black --check mcp_base/ tests/ || echo "⚠ Black check failed (non-blocking)"
+            ruff check mcp_base/ tests/ || echo "⚠ Ruff check failed (non-blocking)"
+            mypy mcp_base/ || echo "⚠ MyPy check failed (non-blocking)"
           fi
 
       - name: Upload coverage to Codecov
