--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,18 +18,13 @@ jobs:
         with:
           python-version: "3.12"
 
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          version: latest
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-
-      - name: Install dependencies
-        run: poetry install --no-interaction
+      - name: Install build dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install build setuptools wheel twine
 
       - name: Build distribution packages
-        run: poetry build
+        run: python -m build --sdist --wheel
 
       - name: Extract version from tag
         id: get_version
@@ -42,6 +37,5 @@ jobs:
         env:
           PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
         run: |
-          poetry config pypi-token.pypi $PYPI_API_TOKEN
-          poetry publish
+          python -m twine upload --username __token__ --password $PYPI_API_TOKEN dist/*
 
