--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "mcp-base"
-version = "0.1.5"
+version = "0.1.4"
 description = "Base framework for building MCP services with automatic handler discovery"
 requires-python = ">=3.11"
 license = {text = "MIT"}
@@ -33,6 +33,8 @@ dependencies = [
     "opentelemetry-sdk>=1.24.0",
     "opentelemetry-instrumentation-fastapi>=0.45b0",
     "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
+    "mcp>=1.0.0",  # Model Context Protocol SDK
+    "httpx>=0.27.0",  # Required for FastAPI TestClient
 ]
 
 [project.optional-dependencies]
@@ -57,6 +59,8 @@ target-version = ["py311", "py312"]
 [tool.ruff]
 line-length = 100
 target-version = "py311"
+
+[tool.ruff.lint]
 select = ["E", "W", "F", "I", "B", "C4", "UP"]
 ignore = ["E501", "B008"]
 
@@ -66,4 +70,7 @@ python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
 addopts = ["--strict-markers", "-v"]
+
+[tool.mypy]
+ignore_missing_imports = true
 
